mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      # volumes:
      #   - name: task-pv-storage3
      #     persistentVolumeClaim:
      #       claimName: task-pv-claim3
      # securityContext:
      #   # fsGroup: 1234
      #   runAsUser: 1099
      #   runAsGroup: 1099
      #   fsGroup: 1234
      # volumes:
      #   - name: host-mount
      #     hostPath:
      #       # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
      #       # Linux: /home/jyee/simplest-k8s/host-mount
      #       # macOS: /Users/yourusername/path/to/repo/simplest-k8s/host-mount
      #       path: /home/user/db
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          # command:
          # - /bin/chown
          # - -R
          # - "1000"
          # - /data/db
          # volumeMounts:
          #   - mountPath: /data/db/
          #     # name: task-pv-storage3
          #     name: host-mount
        
       
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
